force-app/main/default/objects/Reconstructed_Fact__c/Reconstructed_Fact__c.object-meta.xml
<CustomObject>
    <description>A single typed fact reconstructed from evidence during an audit. Each fact has a category (DTI, LTV, Credit Score, etc.), a value, an optional confidence score, and a verification state. Facts are extracted from Evidence Items and used during policy replay.</description>
    <label>Reconstructed Fact</label>
    <nameField>
        <displayFormat>RF-{0000}</displayFormat>
        <label>Reconstructed Fact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconstructed Facts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>