force-app/main/default/objects/Reconstructed_Fact__c/fields/Audit_Case__c.field-meta.xml
<CustomField>
    <fullName>Audit_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent audit case this reconstructed fact belongs to.</description>
    <inlineHelpText>The audit case this fact was reconstructed for.</inlineHelpText>
    <label>Audit Case</label>
    <referenceTo>Audit_Case__c</referenceTo>
    <relationshipLabel>Reconstructed Facts</relationshipLabel>
    <relationshipName>Reconstructed_Facts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>