force-app/main/default/objects/Reconstructed_Fact__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Confidence score 0.00 to 1.00</description>
    <inlineHelpText>How confident the extraction is, from 0.00 (no confidence) to 1.00 (certain).</inlineHelpText>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>