force-app/main/default/objects/Reconstructed_Fact__c/fields/Extractor_Version__c.field-meta.xml
<CustomField>
    <fullName>Extractor_Version__c</fullName>
    <description>Version identifier of the extraction logic that produced this fact.</description>
    <inlineHelpText>The version of the extractor that produced this fact value.</inlineHelpText>
    <label>Extractor Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>