force-app/main/default/objects/Reconstructed_Fact__c/fields/Fact_Type__c.field-meta.xml
<CustomField>
    <fullName>Fact_Type__c</fullName>
    <description>Category of the reconstructed fact.</description>
    <inlineHelpText>The type of fact being reconstructed (e.g., DTI, LTV, Credit Score).</inlineHelpText>
    <label>Fact Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DTI</fullName>
            </value>
            <value>
                <fullName>LTV</fullName>
            </value>
            <value>
                <fullName>Credit_Score</fullName>
                <label>Credit Score</label>
            </value>
            <value>
                <fullName>Annual_Income</fullName>
                <label>Annual Income</label>
            </value>
            <value>
                <fullName>Employment_Duration</fullName>
                <label>Employment Duration</label>
            </value>
            <value>
                <fullName>Prior_Default</fullName>
                <label>Prior Default</label>
            </value>
            <value>
                <fullName>Loan_Amount</fullName>
                <label>Loan Amount</label>
            </value>
            <value>
                <fullName>Address_Tenure</fullName>
                <label>Address Tenure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>