force-app/main/default/objects/Reconstructed_Fact__c/fields/Is_Unverifiable__c.field-meta.xml
<CustomField>
    <fullName>Is_Unverifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this fact cannot be verified due to missing or insufficient evidence.</description>
    <inlineHelpText>Check if this fact cannot be verified and requires escalation.</inlineHelpText>
    <label>Is Unverifiable</label>
    <type>Checkbox</type>
</CustomField>