force-app/main/default/objects/Reconstructed_Fact__c/fields/Source_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Source_Evidence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The evidence item from which this fact was extracted.</description>
    <inlineHelpText>The evidence item that sourced this reconstructed fact.</inlineHelpText>
    <label>Source Evidence</label>
    <referenceTo>Evidence_Item__c</referenceTo>
    <relationshipLabel>Reconstructed Facts</relationshipLabel>
    <relationshipName>Reconstructed_Facts</relationshipName>
    <type>Lookup</type>
</CustomField>