force-app/main/default/objects/Reconstructed_Fact__c/fields/Unverifiable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unverifiable_Reason__c</fullName>
    <description>Explanation of why this fact cannot be verified.</description>
    <inlineHelpText>Describe why this fact is unverifiable (e.g., document missing, illegible, contradictory).</inlineHelpText>
    <label>Unverifiable Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>