force-app/main/default/objects/Reconstructed_Fact__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The reconstructed fact value as text. Interpretation depends on the Fact Type.</description>
    <inlineHelpText>The extracted or reconstructed value for this fact.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>