force-app/main/default/objects/Reconstructed_Fact__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this fact has been manually verified by an auditor.</description>
    <inlineHelpText>Check when an auditor has manually verified this fact.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>