force-app/main/default/objects/Reconstructed_Fact__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <description>When this fact was manually verified.</description>
    <inlineHelpText>The date and time when an auditor verified this fact.</inlineHelpText>
    <label>Verified At</label>
    <type>DateTime</type>
</CustomField>