force-app/main/default/objects/Reconstructed_Fact__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who manually verified this fact.</description>
    <inlineHelpText>The auditor who verified this reconstructed fact.</inlineHelpText>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reconstructed_Facts_Verified</relationshipName>
    <type>Lookup</type>
</CustomField>